// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel css inline autoLabel set to always - complex expression 1`] = `
"
    import { css } from 'emotion'
    import fooStyles from './foo'
    let cls = css(fooStyles)
    

      ↓ ↓ ↓ ↓ ↓ ↓

import { css } from 'emotion';
import fooStyles from './foo';
let cls = css(fooStyles);"
`;

exports[`babel css inline autoLabel set to always - complex expression, last arg string 1`] = `
"
    import { css } from 'emotion'
    import fooStyles from './foo'
    let cls = css(fooStyles, 'color: hotpink;')
    

      ↓ ↓ ↓ ↓ ↓ ↓

import { css } from 'emotion';
import fooStyles from './foo';
let cls = css(fooStyles, 'color: hotpink;');"
`;

exports[`babel css inline autoLabel set to always 1`] = `
"
    import { css } from 'emotion'
    let cls = css({color:'hotpink'})
    

      ↓ ↓ ↓ ↓ ↓ ↓

import { css } from 'emotion';
let cls = css({
  color: 'hotpink'
});"
`;

exports[`babel css inline autoLabel set to never - complex expression 1`] = `
"
    import { css } from 'emotion'
    import fooStyles from './foo'
    let cls = css(fooStyles)
    

      ↓ ↓ ↓ ↓ ↓ ↓

import { css } from 'emotion';
import fooStyles from './foo';
let cls = css(fooStyles);"
`;

exports[`babel css inline autoLabel set to never 1`] = `
"
    import { css } from 'emotion'
    let cls = css({color:'hotpink'})
    

      ↓ ↓ ↓ ↓ ↓ ↓

import { css } from 'emotion';
let cls = css({
  color: 'hotpink'
});"
`;

exports[`babel css inline code already transpiled by emotion plugin (avoid double transpilation) 1`] = `
"
    import { keyframes as _keyframes } from \\"emotion\\";
    import { css as _css } from \\"emotion\\";

    function _EMOTION_STRINGIFIED_CSS_ERROR__() { return \\"You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop).\\"; }

    let someCls =
    /*#__PURE__*/
    _css(process.env.NODE_ENV === \\"production\\" ? {
      name: \\"1jwq1yt-someCls\\",
      styles: \\"color:hotpink;;label:someCls;\\"
    } : {
      name: \\"1jwq1yt-someCls\\",
      styles: \\"color:hotpink;;label:someCls;\\",
      map: \\"/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImRvZXMtbm90LWRvdWJsZS1sYWJlbC1hbHJlYWR5LXRyYW5zcGlsZWQtY29kZS5qcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFHaUIiLCJmaWxlIjoiZG9lcy1ub3QtZG91YmxlLWxhYmVsLWFscmVhZHktdHJhbnNwaWxlZC1jb2RlLmpzIiwic291cmNlc0NvbnRlbnQiOlsiLy8gVE9ETzogdGhlb3JldGljYWxsdCBgZW1vdGlvbmAgc2hvdWxkIGJlIG1lbnRpb25lZCBpbiB0aGlzIHRlc3QgLSBzbyBwcm9iYWJseSB3ZSdkIGxpa2UgdG8gbW92ZSB0aGlzIHRlc3QgYXJvdW5kXG5pbXBvcnQgeyBjc3MsIGtleWZyYW1lcyB9IGZyb20gJ2Vtb3Rpb24nXG5cbmxldCBzb21lQ2xzID0gY3NzYFxuICBjb2xvcjogaG90cGluaztcbmBcblxubGV0IHJvdGF0ZTM2MCA9IGtleWZyYW1lc2BcbiAgZnJvbSB7XG4gICAgdHJhbnNmb3JtOiByb3RhdGUoMGRlZyk7XG4gIH1cbiAgdG8ge1xuICAgIHRyYW5zZm9ybTogcm90YXRlKDM2MGRlZyk7XG4gIH1cbmBcbiJdfQ== */\\",
      toString: _EMOTION_STRINGIFIED_CSS_ERROR__
    });

    let rotate360 =
    /*#__PURE__*/
    _keyframes(process.env.NODE_ENV === \\"production\\" ? {
      name: \\"1k98dea-rotate360\\",
      styles: \\"from{transform:rotate(0deg);}to{transform:rotate(360deg);};label:rotate360;\\"
    } : {
      name: \\"1k98dea-rotate360\\",
      styles: \\"from{transform:rotate(0deg);}to{transform:rotate(360deg);};label:rotate360;\\",
      map: \\"/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImRvZXMtbm90LWRvdWJsZS1sYWJlbC1hbHJlYWR5LXRyYW5zcGlsZWQtY29kZS5qcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFPeUIiLCJmaWxlIjoiZG9lcy1ub3QtZG91YmxlLWxhYmVsLWFscmVhZHktdHJhbnNwaWxlZC1jb2RlLmpzIiwic291cmNlc0NvbnRlbnQiOlsiLy8gVE9ETzogdGhlb3JldGljYWxsdCBgZW1vdGlvbmAgc2hvdWxkIGJlIG1lbnRpb25lZCBpbiB0aGlzIHRlc3QgLSBzbyBwcm9iYWJseSB3ZSdkIGxpa2UgdG8gbW92ZSB0aGlzIHRlc3QgYXJvdW5kXG5pbXBvcnQgeyBjc3MsIGtleWZyYW1lcyB9IGZyb20gJ2Vtb3Rpb24nXG5cbmxldCBzb21lQ2xzID0gY3NzYFxuICBjb2xvcjogaG90cGluaztcbmBcblxubGV0IHJvdGF0ZTM2MCA9IGtleWZyYW1lc2BcbiAgZnJvbSB7XG4gICAgdHJhbnNmb3JtOiByb3RhdGUoMGRlZyk7XG4gIH1cbiAgdG8ge1xuICAgIHRyYW5zZm9ybTogcm90YXRlKDM2MGRlZyk7XG4gIH1cbmBcbiJdfQ== */\\",
      toString: _EMOTION_STRINGIFIED_CSS_ERROR__
    });
    

      ↓ ↓ ↓ ↓ ↓ ↓

import { keyframes as _keyframes } from \\"emotion\\";
import { css as _css } from \\"emotion\\";

function _EMOTION_STRINGIFIED_CSS_ERROR__() {
  return \\"You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop).\\";
}

let someCls =
/*#__PURE__*/
_css(process.env.NODE_ENV === \\"production\\" ? {
  name: \\"1jwq1yt-someCls\\",
  styles: \\"color:hotpink;;label:someCls;\\"
} : {
  name: \\"1jwq1yt-someCls\\",
  styles: \\"color:hotpink;;label:someCls;\\",
  map: \\"/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImRvZXMtbm90LWRvdWJsZS1sYWJlbC1hbHJlYWR5LXRyYW5zcGlsZWQtY29kZS5qcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFHaUIiLCJmaWxlIjoiZG9lcy1ub3QtZG91YmxlLWxhYmVsLWFscmVhZHktdHJhbnNwaWxlZC1jb2RlLmpzIiwic291cmNlc0NvbnRlbnQiOlsiLy8gVE9ETzogdGhlb3JldGljYWxsdCBgZW1vdGlvbmAgc2hvdWxkIGJlIG1lbnRpb25lZCBpbiB0aGlzIHRlc3QgLSBzbyBwcm9iYWJseSB3ZSdkIGxpa2UgdG8gbW92ZSB0aGlzIHRlc3QgYXJvdW5kXG5pbXBvcnQgeyBjc3MsIGtleWZyYW1lcyB9IGZyb20gJ2Vtb3Rpb24nXG5cbmxldCBzb21lQ2xzID0gY3NzYFxuICBjb2xvcjogaG90cGluaztcbmBcblxubGV0IHJvdGF0ZTM2MCA9IGtleWZyYW1lc2BcbiAgZnJvbSB7XG4gICAgdHJhbnNmb3JtOiByb3RhdGUoMGRlZyk7XG4gIH1cbiAgdG8ge1xuICAgIHRyYW5zZm9ybTogcm90YXRlKDM2MGRlZyk7XG4gIH1cbmBcbiJdfQ== */\\",
  toString: _EMOTION_STRINGIFIED_CSS_ERROR__
});

let rotate360 =
/*#__PURE__*/
_keyframes(process.env.NODE_ENV === \\"production\\" ? {
  name: \\"1k98dea-rotate360\\",
  styles: \\"from{transform:rotate(0deg);}to{transform:rotate(360deg);};label:rotate360;\\"
} : {
  name: \\"1k98dea-rotate360\\",
  styles: \\"from{transform:rotate(0deg);}to{transform:rotate(360deg);};label:rotate360;\\",
  map: \\"/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImRvZXMtbm90LWRvdWJsZS1sYWJlbC1hbHJlYWR5LXRyYW5zcGlsZWQtY29kZS5qcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFPeUIiLCJmaWxlIjoiZG9lcy1ub3QtZG91YmxlLWxhYmVsLWFscmVhZHktdHJhbnNwaWxlZC1jb2RlLmpzIiwic291cmNlc0NvbnRlbnQiOlsiLy8gVE9ETzogdGhlb3JldGljYWxsdCBgZW1vdGlvbmAgc2hvdWxkIGJlIG1lbnRpb25lZCBpbiB0aGlzIHRlc3QgLSBzbyBwcm9iYWJseSB3ZSdkIGxpa2UgdG8gbW92ZSB0aGlzIHRlc3QgYXJvdW5kXG5pbXBvcnQgeyBjc3MsIGtleWZyYW1lcyB9IGZyb20gJ2Vtb3Rpb24nXG5cbmxldCBzb21lQ2xzID0gY3NzYFxuICBjb2xvcjogaG90cGluaztcbmBcblxubGV0IHJvdGF0ZTM2MCA9IGtleWZyYW1lc2BcbiAgZnJvbSB7XG4gICAgdHJhbnNmb3JtOiByb3RhdGUoMGRlZyk7XG4gIH1cbiAgdG8ge1xuICAgIHRyYW5zZm9ybTogcm90YXRlKDM2MGRlZyk7XG4gIH1cbmBcbiJdfQ== */\\",
  toString: _EMOTION_STRINGIFIED_CSS_ERROR__
});"
`;

exports[`babel css inline label format function 1`] = `
"
    import { css } from '@emotion/css'
    let cls = css({color:'hotpink'})
    

      ↓ ↓ ↓ ↓ ↓ ↓

function _EMOTION_STRINGIFIED_CSS_ERROR__() { return \\"You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop).\\"; }

import { css } from '@emotion/css';
let cls =
/*#__PURE__*/
css(process.env.NODE_ENV === \\"production\\" ? {
  name: \\"3sn2xs\\",
  styles: \\"color:hotpink\\"
} : {
  name: \\"wiafqk-CLS_CSS-REQUIRES-OPTIONS\\",
  styles: \\"color:hotpink;label:CLS_CSS-REQUIRES-OPTIONS;\\",
  map: \\"/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImNzcy1yZXF1aXJlcy1vcHRpb25zLmpzIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUVjIiwiZmlsZSI6ImNzcy1yZXF1aXJlcy1vcHRpb25zLmpzIiwic291cmNlc0NvbnRlbnQiOlsiXG4gICAgaW1wb3J0IHsgY3NzIH0gZnJvbSAnQGVtb3Rpb24vY3NzJ1xuICAgIGxldCBjbHMgPSBjc3Moe2NvbG9yOidob3RwaW5rJ30pXG4gICAgIl19 */\\",
  toString: _EMOTION_STRINGIFIED_CSS_ERROR__
});"
`;

exports[`babel css inline label format with dirname, filename, and local 1`] = `
"
    import { css } from '@emotion/css'
    let cls = css({color:'hotpink'})
    

      ↓ ↓ ↓ ↓ ↓ ↓

function _EMOTION_STRINGIFIED_CSS_ERROR__() { return \\"You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop).\\"; }

import { css } from '@emotion/css';
let cls =
/*#__PURE__*/
css(process.env.NODE_ENV === \\"production\\" ? {
  name: \\"3sn2xs\\",
  styles: \\"color:hotpink\\"
} : {
  name: \\"1azqn5t-my-css-__tests__-css-requires-options-cls\\",
  styles: \\"color:hotpink;label:my-css-__tests__-css-requires-options-cls;\\",
  map: \\"/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImNzcy1yZXF1aXJlcy1vcHRpb25zLmpzIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUVjIiwiZmlsZSI6ImNzcy1yZXF1aXJlcy1vcHRpb25zLmpzIiwic291cmNlc0NvbnRlbnQiOlsiXG4gICAgaW1wb3J0IHsgY3NzIH0gZnJvbSAnQGVtb3Rpb24vY3NzJ1xuICAgIGxldCBjbHMgPSBjc3Moe2NvbG9yOidob3RwaW5rJ30pXG4gICAgIl19 */\\",
  toString: _EMOTION_STRINGIFIED_CSS_ERROR__
});"
`;

exports[`babel css inline label format with filename and local 1`] = `
"
    import { css } from '@emotion/css'
    let cls = css({color:'hotpink'})
    

      ↓ ↓ ↓ ↓ ↓ ↓

function _EMOTION_STRINGIFIED_CSS_ERROR__() { return \\"You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop).\\"; }

import { css } from '@emotion/css';
let cls =
/*#__PURE__*/
css(process.env.NODE_ENV === \\"production\\" ? {
  name: \\"3sn2xs\\",
  styles: \\"color:hotpink\\"
} : {
  name: \\"12j84ju-my-css-css-requires-options-cls\\",
  styles: \\"color:hotpink;label:my-css-css-requires-options-cls;\\",
  map: \\"/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImNzcy1yZXF1aXJlcy1vcHRpb25zLmpzIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUVjIiwiZmlsZSI6ImNzcy1yZXF1aXJlcy1vcHRpb25zLmpzIiwic291cmNlc0NvbnRlbnQiOlsiXG4gICAgaW1wb3J0IHsgY3NzIH0gZnJvbSAnQGVtb3Rpb24vY3NzJ1xuICAgIGxldCBjbHMgPSBjc3Moe2NvbG9yOidob3RwaW5rJ30pXG4gICAgIl19 */\\",
  toString: _EMOTION_STRINGIFIED_CSS_ERROR__
});"
`;

exports[`babel css inline label format with filename that is index and local 1`] = `
"
    import { css } from '@emotion/css'
    let cls = css({color:'hotpink'})
    

      ↓ ↓ ↓ ↓ ↓ ↓

function _EMOTION_STRINGIFIED_CSS_ERROR__() { return \\"You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop).\\"; }

import { css } from '@emotion/css';
let cls =
/*#__PURE__*/
css(process.env.NODE_ENV === \\"production\\" ? {
  name: \\"3sn2xs\\",
  styles: \\"color:hotpink\\"
} : {
  name: \\"1uf5d32-my-css-some-directory-cls\\",
  styles: \\"color:hotpink;label:my-css-some-directory-cls;\\",
  map: \\"/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImluZGV4LmpzIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUVjIiwiZmlsZSI6ImluZGV4LmpzIiwic291cmNlc0NvbnRlbnQiOlsiXG4gICAgaW1wb3J0IHsgY3NzIH0gZnJvbSAnQGVtb3Rpb24vY3NzJ1xuICAgIGxldCBjbHMgPSBjc3Moe2NvbG9yOidob3RwaW5rJ30pXG4gICAgIl19 */\\",
  toString: _EMOTION_STRINGIFIED_CSS_ERROR__
});"
`;

exports[`babel css inline label format with only local 1`] = `
"
    import { css } from '@emotion/css'
    let cls = css({color:'hotpink'})
    

      ↓ ↓ ↓ ↓ ↓ ↓

function _EMOTION_STRINGIFIED_CSS_ERROR__() { return \\"You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop).\\"; }

import { css } from '@emotion/css';
let cls =
/*#__PURE__*/
css(process.env.NODE_ENV === \\"production\\" ? {
  name: \\"3sn2xs\\",
  styles: \\"color:hotpink\\"
} : {
  name: \\"1xiywpm-my-css-cls\\",
  styles: \\"color:hotpink;label:my-css-cls;\\",
  map: \\"/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImNzcy1yZXF1aXJlcy1vcHRpb25zLmpzIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUVjIiwiZmlsZSI6ImNzcy1yZXF1aXJlcy1vcHRpb25zLmpzIiwic291cmNlc0NvbnRlbnQiOlsiXG4gICAgaW1wb3J0IHsgY3NzIH0gZnJvbSAnQGVtb3Rpb24vY3NzJ1xuICAgIGxldCBjbHMgPSBjc3Moe2NvbG9yOidob3RwaW5rJ30pXG4gICAgIl19 */\\",
  toString: _EMOTION_STRINGIFIED_CSS_ERROR__
});"
`;

exports[`babel css inline label on code transpiled by TS (with interpolations)  1`] = `
"
    import { __makeTemplateObject } from 'tslib'
    import { css } from '@emotion/react'
    import { hoverStyles } from './styles'

    var templateObject_1

    const someVar = css(
      templateObject_1 ||
        (templateObject_1 = __makeTemplateObject(
          ['\\\\n  color: hotpink;\\\\n'],
          ['\\\\n  color: hotpink;\\\\n']
        )),
      hoverStyles
    )
    

      ↓ ↓ ↓ ↓ ↓ ↓

import { __makeTemplateObject } from 'tslib';
import { css } from '@emotion/react';
import { hoverStyles } from './styles';
var templateObject_1;
const someVar = css(templateObject_1 || (templateObject_1 = __makeTemplateObject(['\\\\n  color: hotpink;\\\\n'], ['\\\\n  color: hotpink;\\\\n'])), hoverStyles);"
`;

exports[`babel css inline label on code transpiled by TS 1`] = `
"
    import { __makeTemplateObject } from 'tslib'
    import { css } from '@emotion/react'

    var templateObject_1

    const someVar = css(
      templateObject_1 ||
        (templateObject_1 = __makeTemplateObject(
          ['\\\\n  color: hotpink;\\\\n'],
          ['\\\\n  color: hotpink;\\\\n']
        ))
    )
    

      ↓ ↓ ↓ ↓ ↓ ↓

import { __makeTemplateObject } from 'tslib';
import { css } from '@emotion/react';
var templateObject_1;
const someVar =
/*#__PURE__*/
css(templateObject_1 || (templateObject_1 = __makeTemplateObject(['\\\\n  color: hotpink;\\\\n' + (process.env.NODE_ENV === \\"production\\" ? \\"\\" : \\";label:someVar;\\")], ['\\\\n  color: hotpink;\\\\n' + (process.env.NODE_ENV === \\"production\\" ? \\"\\" : \\";label:someVar;\\")])));"
`;
